--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../Grafiken/Icon.png" />
-    <!--BT CSS-->
+    <!-- BT CSS -->
     <link rel="stylesheet" href="../bs_8.19.2/css/bootstrap.min.css" />
-    <!--Custom CSS-->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="../CSS/style.css" />
-    <!--Icons-->
+    <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <title>Social Media - Avatok</title>
 </head>
 
 <body>
-    <!--Navigation-->
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 sticky-top">
         <div class="container">
             <img src="../Grafiken/Avatok.png" width="50" alt="NavAvatok" style="margin-right: 0.3rem;">
             <a href="../index.html" class="navbar-brand">Avatok</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenue">
-                <span class="navbar-toggler-icon" title="NavBarButton"></span></button>
+                <span class="navbar-toggler-icon" title="NavBarButton"></span>
+            </button>
             <div class="collapse navbar-collapse" id='navmenue'>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a href="../index.html" class="nav-link">Startseite</a></li>
+                    <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="Portfolio.html" class="nav-link">Portfolio</a></li>
                     <li class="nav-item"><a href="Services.html" class="nav-link">Services</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Social Media</a></li>
@@ -34,98 +35,109 @@
             </div>
         </div>
     </nav>
-    <!--End-Navigation-->
-    <!--Linktree-->
+    <!-- End Navigation -->
+
+    <!-- Linktree -->
     <section class="p-5">
         <div class="container text-center">
             <a href="https://linktr.ee/avatok"><img src="../Grafiken/Avatok.png" alt="SMlogo" width="250"></a>
             <br><br>
             <h3>Pascal (Avatok)</h3>
             <h5>Digital Creator</h5>
-            <br><br>
-            <div class="row text-center">
-                <div class="col">
-                    <b>_avatok_</b><br>
-                    <a href="https://www.instagram.com/_avatok_"><img class="social-icon" src="../Grafiken/Social/Instagram.svg" alt="IG"></a>
-                </div>
-                <div class="col">
-                    <b>Avatok_</b><br>
-                    <a href="https://www.twitch.tv/avatok_"><img class="social-icon" src="../Grafiken/Social/Twitch.svg" alt="Twitch"></a>
-                </div>
-                <div class="col">
-                    <b>Avatok</b><br>
-                    <a href="https://www.youtube.com/@Avatok"><img class="social-icon" src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col">
-                    <b>Avatok_</b><br>
-                    <a href="https://de.fiverr.com/avatok_"><img class="social-icon" src="../Grafiken/Social/Fiverr.svg" alt="Fvrr"></a>
-                </div>
-                <div class="col">
-                    <b>avatok</b><br>
-                    <a href="https://github.com/Avatok"><img class="social-icon" src="../Grafiken/Social/GitHub.svg" alt="Github"></a>
-                </div>
-                <div class="col">
-                    <b>Cooming Soon</b><br>
-                    <a href="https://www.youtube.com/"><img class="social-icon" src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
-                </div>
-            </div>
-            <br><br>
-            <!--Carousel-->
-            <div id="carouselTestimonials" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 1">
+            <br><br><br>
+
+            <!-- Social Media Icons -->
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col">
+                        <b>_avatok_</b><br>
+                        <a href="https://www.instagram.com/_avatok_/"><img src="../Grafiken/Social/Instagram.svg" alt="IG"></a>
                     </div>
-                    <div class="carousel-item">
-                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 2">
+
+                    <div class="col">
+                        <b>Avatok_</b><br>
+                        <a href="https://www.twitch.tv/avatok_"><img src="../Grafiken/Social/Twitch.svg" alt="Twitch"></a>
                     </div>
-                    <div class="carousel-item">
-                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 3">
-                    </div>
-                    <div class="carousel"></div>
-                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 3">
-                    </div>
-                    <div class="carousel"></div>
-                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 3">
-                    </div>
-                    <div class="carousel"></div>
-                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 3">
+
+                    <div class="col">
+                        <b>Avatok</b><br>
+                        <a href="https://www.youtube.com/@Avatok"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonials" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Back</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonials" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Further</span>
-                </button>
-            </div>
-            <!--Call to Action-->
-            <div class="cta p-3 bg-light">
-                <h4>Follow me on social media or contact me!</h4>
-                <p>Discover my latest projects, stay up to date and get in touch with me!</p>
-                <a href="Contact.html" class="btn btn-primary m-2">Contact</a>
-                <a href="https://linktr.ee/avatok" class="btn btn-outline-secondary m-2">Social Media</a>
+
+                <div class="row text-center">
+                    <div class="col">
+                        <b>Avatok_</b><br>
+                        <a href="https://de.fiverr.com/avatok_"><img src="../Grafiken/Social/Fiverr.svg" alt="Fiverr"></a>
+                    </div>
+
+                    <div class="col">
+                        <b>avatok</b><br>
+                        <a href="https://github.com/Avatok"><img src="../Grafiken/Social/GitHub.svg" alt="Github"></a>
+                    </div>
+
+                    <div class="col">
+                        <b>Coming Soon</b><br>
+                        <a href="https://www.youtube.com/"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <!--End-Linktree-->
-    <br><br><br><br>
-    <!--Footer-->
+    <!-- End Linktree -->
+
+    <!-- Carousel -->
+    <section class="p-5">
+        <div class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Placeholder Image 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Placeholder Image 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Placeholder Image 3">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!-- End Carousel -->
+
+    <!-- Call to Action -->
+    <section class="p-5 text-center">
+        <div class="container">
+            <h2>Interested in my work?</h2>
+            <p>Feel free to reach out to me via my contact page or follow me on my social media channels!</p>
+            <a href="Contact.html" class="btn btn-primary btn-lg rounded-pill">Contact Me</a>
+        </div>
+    </section>
+    <!-- End Call to Action -->
+
+    <!-- Footer -->
     <footer class="p-3 bg-dark text-white text-center">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-4">
                     <a href="Imprint.html">
-                        <p class="lead" style="color:#caf8a3">Impressum/Datenschutz</p>
+                        <p class="lead" style="color:#caf8a3">Imprint / Privacy Policy</p>
                     </a>
                 </div>
+
                 <div class="col-md-4">
                     <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
                 </div>
+
                 <div class="col-md-4">
                     <a href="#">
                         <i class="bi bi-arrow-up-circle h2 icon-color"></i>
@@ -134,8 +146,9 @@
             </div>
         </div>
     </footer>
-    <!--End-Footer-->
-    <!--Java Script-->
+    <!-- End Footer -->
+
+    <!-- JavaScript -->
     <script src="../bs_8.19.2/js/bootstrap.bundle.min.js"></script>
 </body>
 
