--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -92,13 +92,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Placeholder Image 1">
+                        <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Placeholder Image 2">
+                        <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Placeholder Image 3">
+                        <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -119,7 +119,7 @@
         <div class="container">
             <h2>Interested in my work?</h2>
             <p>Feel free to reach out to me via my contact page or follow me on my social media channels!</p>
-            <a href="Contact.html" class="btn btn-primary btn-lg rounded-pill">Contact Me</a>
+            <a href="Contact.html" class="btn btn-lg rounded-pill" style="background-color: #caf8a3; color: #000;">Contact Me</a>
         </div>
     </section>
     <!-- End Call to Action -->
