--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -140,7 +140,7 @@
 
                 <div class="col-md-4">
                     <a href="#">
-                        <i class="bi bi-arrow-up-circle h2 icon-color"></i>
+                        <i class="bi bi-arrow-up-circle h2 icon-color style="color:#caf8a3""></i>
                     </a>
                 </div>
             </div>
