--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -100,6 +100,12 @@
                     <div class="carousel-item">
                         <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 3">
                     </div>
+                    <div class="carousel-item">
+                        <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 3">
+                    </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
