--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -89,6 +89,8 @@
     <!-- Carousel -->
     <section class="p-5">
         <div class="container">
+            <h2>Partner Projects?</h2>
+            <br>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
