--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -77,8 +77,8 @@
                     </div>
 
                     <div class="col">
-                        <b>Coming Soon</b><br>
-                        <a href="https://www.youtube.com/"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
+                        <b>Philip Saul & Twinks</b><br>
+                        <a href="https://www.youtube.com/Philip-Saul-and-Twinks"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
                     </div>
                 </div>
             </div>
