--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -78,7 +78,7 @@
 
                     <div class="col">
                         <b>Philip Saul & Twinks</b><br>
-                        <a href="https://www.youtube.com/Philip-Saul-and-Twinks"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
+                        <a href="https://www.youtube.com/@Philip-Saul-and-Twinks"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
                     </div>
                 </div>
             </div>
