--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
           <div class="col-md p-5">
               <h2>Pascal - Avatok</h2>
               <p class="lead">
-                Hello, my name is Avatok (Pascal) and I'm 18 years old.
+                Hello, my name is Avatok (Pascal) and I'm 19 years old.
               </p>
               <p class="lead">
-                I live in Austria and have been working with computer hardware and software since I was young. Since I'm also attending a vocational school for information technology, I keep learning new things.
+                I live in Austria and have been working with computer hardware and software since my youth. I have completed a degree in information technology.
               </p>
               <a class="btn btn-light mt-3" id="Q1" onclick="ScrollDown()" data-bs-toggle="collapse" data-bs-target="#question-one">
                 <i class="bi bi-chevron-right">Read More</i>
@@ -86,19 +86,19 @@
                       <h3>Main Information</h3>
                     <ul>
                       <li><b>Name: </b> Pascal</li>
-                      <li><b>Age: </b> 18</li>
+                      <li><b>Age: </b> 19</li>
                       <li><b>Place of residence: </b> austria</li>
-                      <li><b>Work: </b> pupil</li>
+                      <li><b>Work: </b> I am in a School</li>
                     </ul>
                       <h3>Languages</h3>
                     <ul>
                         <li>German / Deutsch</li>
                         <li>English / Englisch</li>
                     </ul>
-                      <h3>Degrees and awards</h3>
+                      <h3>Certifications</h3>
                     <ul>
-                        <li>CCNAv7: Introduction to Networks</li>
-                        <li>CCNAv7: Switching, Routing, and Wireless Essentials</li>
+                        <li><b>Network Technology</b>CCNAv7: Introduction to Networks</li>
+                        <li><b>Network Technology</b>CCNAv7: Switching, Routing, and Wireless Essentials</li>
                     </ul>
                   </div>
                   </div>
@@ -120,7 +120,7 @@
                     RAM - Corsair Vengeance RGB 4x16GB (64GB) 3600Mhz<br>
                     Storage - 512GB + 2TB m.2 NVMe SSD + 1TB SATA SSD (3,5TB)<br>
                     Case - Lian Li O11 Dynamic in black<br>
-                    Fans: 9x Corsair QL120 + 3 Corsair ML120 (AIO Standard Fans)<br>
+                    Fans: 9x Corsair QL120 + 3 Corsair ML120 (Push/Pull Configuration)<br>
                     PSU: Corsair RM850x 80 Plus Gold<br>
 <br>
                     <b>Monitor Setup:</b><br>
@@ -135,7 +135,7 @@
                     Headset - Beyerdynamic DT 770 Pro (80 Ohm)<br>
                     Microphone - AUNA MIC 900B<br>
                     Speaker - Logitech Z906<br>
-                    Special Gadget - Elgato Stream Deck Mini<br>
+                    Special Gadget - Elgato Stream Deck<br>
                     Webcam - Streamplify Cam (FullHD/60FPS)<br>
 <br>
 <br>
@@ -145,22 +145,6 @@
                     GPU - Nvidia Geforce GTX 1650Ti 4GB<br>
                     RAM - SkHynix 2x8GB (16GB) 3200Mhz<br>
                     Storage - 512GB + 256GB NVMe SSD (750GB)<br>
-<br>                      
-                    <b>Peripherie:</b><br>
-                    Keyboard - Corsair K55 RGB PRO XT<br>
-                    Mice - Corsair M55 RGB Pro black<br>
-                    Headset - Corsair HS60 Pro<br>
-                    Speaker - Trust GXT 38<br>
-<br>
-                    <b>Monitor Setup:</b><br>
-                    1x Lenovo (15,6" - 120hz - 1920 x 1080 Pixel)<br>
-                    1x ASUS VG248QE (24" - 60hz - 1920 x 1080 Pixel)<br>
-<br>                      
-<br>
-<br>
-                    <b>Konsolen:</b><br>
-                    Playstation 4 Standard Edition<br>
-                    XBox 360 Limited Edition (Halo 4)<br>
                   </p>
                   </div>
                   </div>
