--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
                             <b>Adobe Photoshop</b><br>
                             <a href="https://www.adobe.com/at/products/photoshop.html"><img src="Grafiken/Software/Photoshop.svg" alt="Photoshop" /></a>
                           </div>
+
+                          <div class="col">
+                            <b>MySQL Workbench</b><br>
+                            <a href="https://www.mysql.com/products/workbench/"><img src="Grafiken/Software/SQL.svg" alt="MySQL Workbench" /></a>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -211,21 +216,65 @@
             <!--End-Item3-->
             <!--Item4-->
             <div class="accordion-item">
-              <div class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">What do I want to learn?</button>
-                  <div id="question-four" class="accordion-collapse collapse" data-bs-parent="#questions">
-                    <div class="accordion-body">
-                      <div class="row text-center">
-                        <div class="col">
-                          <b>Advanced Programming</b><br>
-                          <a href="#"><img src="Grafiken/Software/Programming.png" alt="Programming" /></a>
+                <div class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">Which Software do I use?</button>
+                    <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+                      <div class="accordion-body">
+                        <div class="container">
+                          <div class="row text-center">
+                            <div class="col">
+                              <b>Python</b><br>
+                              <a href="https://code.visualstudio.com/Download"><img src="Grafiken/Software/Code.svg" alt="Code" /></a>
+                            </div>
+                        
+                            <div class="col">
+                              <b>Figma</b><br>
+                              <a href="https://www.figma.com/de/downloads/"><img src="Grafiken/Software/Figma.svg" alt="Figma" /></a>
+                            </div>
+                        
+                            <div class="col">
+                              <b>OBS</b><br>
+                              <a href="https://obsproject.com/de/download"><img src="Grafiken/Software/OBS.svg" alt="OBS" /></a>
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
+                </div>
               </div>
-            </div>
             <!--End-Item4-->
+            <!--Item5-->
+            <div class="accordion-item">
+                <div class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">My Skills:</button>
+                    <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+                      <div class="accordion-body">
+                        <div class="container">
+                          <div class="row text-center">
+                            <h2>Cooming Soon</h2>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+              </div>
+            <!--End-Item5-->
+            <!--Item6-->
+            <div class="accordion-item">
+                <div class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-six">What do I still want to learn?</button>
+                    <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+                      <div class="accordion-body">
+                        <div class="container">
+                          <div class="row text-center">
+                            <h2>Cooming Soon</h2>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+              </div>
+            <!--End-Item6-->
           </div>
         </div>
     </section>
