--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="accordion-item">
                 <div class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">Which Software do I use?</button>
-                    <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+                    <div id="question-four" class="accordion-collapse collapse" data-bs-parent="#questions">
                       <div class="accordion-body">
                         <div class="container">
                           <div class="row text-center">
@@ -245,7 +245,7 @@
             <div class="accordion-item">
                 <div class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">My Skills:</button>
-                    <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+                    <div id="question-five" class="accordion-collapse collapse" data-bs-parent="#questions">
                       <div class="accordion-body">
                         <div class="container">
                           <div class="row text-center">
@@ -261,7 +261,7 @@
             <div class="accordion-item">
                 <div class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-six">What do I still want to learn?</button>
-                    <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+                    <div id="question-six" class="accordion-collapse collapse" data-bs-parent="#questions">
                       <div class="accordion-body">
                         <div class="container">
                           <div class="row text-center">
