--- a/Unterseiten/Services.html
+++ b/Unterseiten/Services.html
@@ -76,8 +76,9 @@
             <h4 class="h4 mb-2">Coding</h4>
             <p>Detailed overview for Coding and Programming</p>
             <ul class="list-unstyled list-line">
-              <li>Lua</li>
-              <li>Python (for micro controller)</li>
+              <li>XXX</li>
+              <li>XXX</li>
+              <li>XXX</li>
             </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
@@ -97,11 +98,9 @@
             <h4 class="h4 mb-2">Other</h4>
             <p>Detailed overview of other things I want to improve</p>
             <ul class="list-unstyled list-line">
-              <li>Joomla</li>
-              <li>C++ / C / c#</li>
-              <li>Reaper (Audio)</li>
-              <li>PC Configuration & Building</li>
-              <li>...</li>
+              <li>XXX</li>
+              <li>XXX</li>
+              <li>XXX</li>
             </ul>
           </div>
         </div>
