--- a/index.html
+++ b/index.html
@@ -215,25 +215,13 @@
             <!--Item4-->
             <div class="accordion-item">
                 <div class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">Which Software do I use?</button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">My Skills:</button>
                     <div id="question-four" class="accordion-collapse collapse" data-bs-parent="#questions">
                       <div class="accordion-body">
                         <div class="container">
                           <div class="row text-center">
-                            <div class="col">
-                              <b>Python</b><br>
-                              <a href="https://code.visualstudio.com/Download"><img src="Grafiken/Software/Code.svg" alt="Code" /></a>
-                            </div>
-                        
-                            <div class="col">
-                              <b>Figma</b><br>
-                              <a href="https://www.figma.com/de/downloads/"><img src="Grafiken/Software/Figma.svg" alt="Figma" /></a>
-                            </div>
-                        
-                            <div class="col">
-                              <b>OBS</b><br>
-                              <a href="https://obsproject.com/de/download"><img src="Grafiken/Software/OBS.svg" alt="OBS" /></a>
-                            </div>
+                              <br>
+                            <h2>Cooming Soon</h2>
                           </div>
                         </div>
                       </div>
@@ -244,11 +232,12 @@
             <!--Item5-->
             <div class="accordion-item">
                 <div class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">My Skills:</button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">What do I still want to learn?</button>
                     <div id="question-five" class="accordion-collapse collapse" data-bs-parent="#questions">
                       <div class="accordion-body">
                         <div class="container">
                           <div class="row text-center">
+                              <br>
                             <h2>Cooming Soon</h2>
                           </div>
                         </div>
@@ -257,22 +246,6 @@
                 </div>
               </div>
             <!--End-Item5-->
-            <!--Item6-->
-            <div class="accordion-item">
-                <div class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-six">What do I still want to learn?</button>
-                    <div id="question-six" class="accordion-collapse collapse" data-bs-parent="#questions">
-                      <div class="accordion-body">
-                        <div class="container">
-                          <div class="row text-center">
-                            <h2>Cooming Soon</h2>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                </div>
-              </div>
-            <!--End-Item6-->
           </div>
         </div>
     </section>
