--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </section>
     <!--End- -->
-    <!--Newsletter-->
+    <!--QA-->
     <section class="p-5" style="background-color: #caf8a3">
       <div class="container d-md-flex justify-content-center align-items-center">
         <div class="">
@@ -72,7 +72,7 @@
         </div>
       </div>
     </section>
-    <!--End-Newsletter-->
+    <!--End-QA-->
     <!-- About me -->
     <section class="m-5">
         <div class="container">
