--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 <br>
 <br>
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center">
+    <footer class="p-3 bg-dark footer-dark text-white text-center">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
