--- a/Unterseiten/Imprint.html
+++ b/Unterseiten/Imprint.html
@@ -43,29 +43,29 @@
     <!--End-Navigation-->
     <!--Main-->
     <div class="Main">
-      <section class="p-5">
-          <div class="container">
-              <h1 id="Imprint">Impressum</h1>
-              <h2>INHABER DER WEBSEITE</h2>
-              <p>
-                  Pascal Z. (Avatok)<br>
-                  Wien<br>
-                  Österreich<br>
-                  E-Mail-Adresse: <a href="mailto:avatok.business@gmail.com" class="link"><strong>avatok.business@gmail.com</strong></a><br>
-              </p>
-<br>
-              <p>
-                  Verantwortlich für den Inhalt: Pascal Z. (Avatok)
-              </p>
-<br>
-              <p>
-                  Plattform der Europäischen Kommission zur Online-Streitbeilegung (OS) für Verbraucher: <a href="https://ec.europa.eu/consumers/odr/" class="link">https://ec.europa.eu/consumers/odr/</a>.
-                  Wir sind nicht bereit und nicht verpflichtet an einem Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.
-              </p>
-<br>
-<br>
-<br>
-              <h1 id="privacypolicy">Datenschutzhinweise</h1>
+    <section class="p-5">
+        <div class="container">
+            <h1 id="Imprint">Imprint</h1>
+            <h2>WEBSITE OWNER</h2>
+            <p>
+                Pascal Z. (Avatok)<br>
+                Vienna<br>
+                Austria<br>
+                Email Address: <a href="mailto:avatok.business@gmail.com" class="link"><strong>avatok.business@gmail.com</strong></a><br>
+            </p>
+            <br>
+            <p>
+                Responsible for content: Pascal Z. (Avatok)
+            </p>
+            <br>
+            <p>
+                European Commission platform for Online Dispute Resolution (ODR) for consumers: <a href="https://ec.europa.eu/consumers/odr/" class="link">https://ec.europa.eu/consumers/odr/</a>.
+                We are neither willing nor obligated to participate in a dispute resolution procedure before a consumer arbitration board.
+            </p>
+            <br>
+            <br>
+            <br>
+            <h1 id="privacypolicy">Privacy Policy</h1>
 <br>
               <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
