--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                           <div class="col">
                             <b>MySQL Workbench</b><br>
-                            <a href="https://www.mysql.com/products/workbench/"><img src="Grafiken/Software/SQL.svg" alt="MySQL Workbench" /></a>
+                            <a href="https://www.mysql.com/products/workbench/"><img src="Grafiken/Software/SQL.png" alt="MySQL Workbench" /></a>
                           </div>
                         </div>
                       </div>
