--- a/Unterseiten/Services.html
+++ b/Unterseiten/Services.html
@@ -106,46 +106,79 @@
         </div>
       </div>
     </section><!-- End Services Section -->
-  </main>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-    <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-md-4">
-            <a href="Imprint.html">
-              <p class="lead" style="color:#caf8a3">Imprint/privacy policy</p>
-            </a>
-          </div>
-    
-          <div class="col-md-4">
-            <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
-          </div>
-    
-          <div class="col-md-4">
-            <a href="#">
-              <i class="bi bi-arrow-up-circle h2 icon-color"></i>
-            </a>
-          </div>
+    </main>
+    <!-- Carousel -->
+    <section class="p-5">
+        <div class="container">
+            <h2>Partner Projects?</h2>
+            <br>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://placehold.co/300x200" class="d-block w-100" alt="Placeholder Image 3">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </div>
-      </div>
+    </section>
+    <!-- End Carousel -->
+
+    <!-- Call to Action -->
+    <section class="p-5 text-center">
+        <div class="container">
+            <h2>Interested in my work?</h2>
+            <p>Feel free to reach out to me via my contact page or follow me on my social media channels!</p>
+            <a href="Contact.html" class="btn btn-lg rounded-pill" style="background-color: #caf8a3; color: #000;">Contact Me</a>
+        </div>
+    </section>
+    <!-- End Call to Action -->
+
+    <!-- Footer -->
+    <footer class="p-3 bg-dark text-white text-center">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <a href="Imprint.html">
+                        <p class="lead" style="color:#caf8a3">Imprint / Privacy Policy</p>
+                    </a>
+                </div>
+
+                <div class="col-md-4">
+                    <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
+                </div>
+
+                <div class="col-md-4">
+                    <a href="#">
+                        <i class="bi bi-arrow-up-circle h2 icon-color style="color:#caf8a3""></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
-    <!--End-Footer-->
+    <!-- End Footer -->
 
-  <!-- Vendor JS Files -->
-  <script src="../JavaScript/isotope.pkgd.min.js"></script>
-
-  <!-- Portfolio CSS -->
-  <script src="../JavaScript/portfolio.js"></script>
-
-  <!--Java Script-->
-  <script src="../bs_8.19.2/js/bootstrap.bundle.min.js"></script> 
-
+    <!-- JavaScript -->
+    <script src="../bs_8.19.2/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
