--- a/Unterseiten/Services.html
+++ b/Unterseiten/Services.html
@@ -76,7 +76,7 @@
             <h4 class="h4 mb-2">Coding</h4>
             <p>Detailed overview for Coding and Programming</p>
             <ul class="list-unstyled list-line">
-              <li>XXX</li>
+              <li>Python (I am still Learning)</li>
               <li>XXX</li>
               <li>XXX</li>
             </ul>
@@ -86,7 +86,7 @@
             <h4 class="h4 mb-2">Adobe Media Design</h4>
             <p>Detailed overview for Adobe Media Design and Adobe Creative Cloud</p>
             <ul class="list-unstyled list-line">
-              <li>Photoshgop</li>
+              <li>Photoshop</li>
               <li>Premiere Pro</li>
               <li>After Effects</li>
               <li>Illustrator</li>
