--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="p-5" style="background-color: #caf8a3">
       <div class="container d-md-flex justify-content-center align-items-center">
         <div class="">
-          <h3 class="mb-3 mb-md-0">Questions & Answers</h3>
+          <h3 class="mb-3 mb-md-0 justify-content-center align-items-center">Questions & Answers</h3>
         </div>
       </div>
     </section>
