--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                     <b>Notebook:</b><br>
                     CPU - AMD Ryzen 5 4600H<br>
                     GPU - Nvidia Geforce GTX 1650Ti 4GB<br>
-                    RAM - SkHynix 2x8GB (16GB) 3200Mhz<br>
-                    Storage - 512GB + 256GB NVMe SSD (750GB)<br>
+                    RAM - Kingston Furry 2x16GB (32) 3200Mhz<br>
+                    Storage - 1TB + 512GB NVMe SSD (1,5TB)<br>
                   </p>
                   </div>
                   </div>
