--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -50,11 +50,11 @@
 
   <main id="main">
 
-    <!-- ======= Works Section ======= -->
+    <!--Works Section-->
     <section class="section site-portfolio">
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" >
+          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0">
             <h2>Hey, I'm Pascal</h2>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end">
@@ -67,8 +67,8 @@
             </div>
           </div>
         </div>
-        <div id="portfolio-grid" class="row no-gutter">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+        <div id="portfolio-grid" class="row g-4 justify-content-center">
+          <div class="item web col-sm-6 col-md-4 col-lg-4">
             <a href="https://nutricanis.live" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Nutricanis)</h3>
@@ -77,7 +77,7 @@
               <img class="img-fluid" alt="Nutricanis" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4">
             <a href="https://defu.live" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Defu)</h3>
@@ -86,7 +86,7 @@
               <img class="img-fluid" alt="Defu" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4">
             <a href="https://herrmanns.live/" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite</h3>
@@ -95,7 +95,7 @@
               <img class="img-fluid" alt="Herrmanns" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4">
             <a href="https://rosinasfinest.live/" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Rosinas Finest)</h3>
@@ -104,7 +104,7 @@
               <img class="img-fluid" alt="Rosinas Finest" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4">
             <a href="https://fraisl.live/" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Fraisl)</h3>
@@ -113,7 +113,7 @@
               <img class="img-fluid" alt="Fraisl" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4">
             <a href="https://napani.live/" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Napani)</h3>
@@ -122,25 +122,25 @@
               <img class="img-fluid" alt="Napani" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4">
             <a href="https://itweb.at/leistungen/messe-marketing/" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>itweb Leistung´s Seite</h3>
-                <span>Figma, Wordpress & Advanced Costum Fields</span>
+                <span>Figma, Wordpress & Advanced Custom Fields</span>
               </div>
               <img class="img-fluid" alt="itweb Leistungen" src="../Grafiken/Portfolio/Itweb.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4">
             <a href="https://itweb.at/glossar/" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>itweb Glossar</h3>
-                <span>Figma, Wordpress & Advanced Costum Fields</span>
+                <span>Figma, Wordpress & Advanced Custom Fields</span>
               </div>
               <img class="img-fluid" alt="itweb Glossar" src="../Grafiken/Portfolio/Itweb.png">
             </a>
           </div>
-          <div class="item adobe col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item adobe col-sm-6 col-md-4 col-lg-4">
             <a href="Portfolio/nvidia-logo-animation.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Nvidia Logo Animation</h3>
@@ -149,7 +149,7 @@
               <img class="img-fluid" src="../Grafiken/Portfolio/Nvidia.png">
             </a>
           </div>
-          <div class="item adobe col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item adobe col-sm-6 col-md-4 col-lg-4">
             <a href="Portfolio/Cyberpunk-Asus.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Cyberpunk x Asus Strix RTX 3090 Werbe Video</h3>
@@ -158,7 +158,7 @@
               <img class="img-fluid" src="../Grafiken/Portfolio/CyberpunkXAsus.png">
             </a>
           </div>
-          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item coding col-sm-6 col-md-4 col-lg-4">
             <a href="https://github.com/Avatok/FiveM-Blips-v1" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>[Standalone] FiveM Blips v1</h3>
@@ -167,7 +167,7 @@
               <img class="img-fluid" alt="FiveM Blips v1" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item coding col-sm-6 col-md-4 col-lg-4">
             <a href="https://github.com/Avatok/FiveM-Blips-v2" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>[Standalone] FiveM Blips v2</h3>
@@ -176,7 +176,7 @@
               <img class="img-fluid" alt="FiveM Blips v2" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item coding col-sm-6 col-md-4 col-lg-4">
             <a href="https://github.com/Avatok/FiveM-Exec-Command-Ped" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>[Standalone] FiveM Exec Command Ped</h3>
@@ -185,7 +185,7 @@
               <img class="img-fluid" alt="FiveM Exec Command Ped" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item coding col-sm-6 col-md-4 col-lg-4">
             <a href="https://github.com/Avatok/FiveM-Talking-Ped" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>[Standalone] FiveM Talking Ped</h3>
@@ -194,36 +194,28 @@
               <img class="img-fluid" alt="FiveM Talking Ped" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item other col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item other col-sm-6 col-md-4 col-lg-4">
             <a href="https://www.feinesfutter.at/" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Wordpress WooCoomerce Betreuung</h3>
-                <span>WooCoomerce Artikel einfügen, bearbeiten und löschen</span>
+                <h3>Wordpress WooCommerce Betreuung</h3>
+                <span>WooCommerce Artikel einfügen, bearbeiten und löschen</span>
               </div>
               <img class="img-fluid" alt="Feines Futter" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item coding web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://avatok.github.io/WebSnakeGame/" class="item-wrap fancybox">
+          <div class="item other col-sm-6 col-md-4 col-lg-4">
+            <a href="https://www.feinesfutter.de/" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Web Snake Game</h3>
-                <span>HTML, CSS, JavaScript und Bootstrap</span>
+                <h3>Wordpress WooCommerce Betreuung</h3>
+                <span>WooCommerce Artikel einfügen, bearbeiten und löschen</span>
               </div>
-              <img class="img-fluid" alt="Web Snake Game" src="../Grafiken/Portfolio/Snake.png">
+              <img class="img-fluid" alt="Feines Futter" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://github.com/Avatok/Discord-WebHook-Writer" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Discord WebHook Writer</h3>
-                <span>Python & Batch-Skriptsprache</span>
-              </div>
-              <img class="img-fluid" alt="Discord WebHook Writer" src="../Grafiken/Portfolio/Python.png">
-            </a>
-           </div>
         </div>
       </div>
-    </section><!-- End  Works Section -->
+    </section>
+    <!--End Works Section-->
 
     <!-- ======= Services Section ======= -->
     <section class="section services">
